2002-03-31  Kevin Breit  <mrproper@ximian.com>

	* C/control-center.xml: Enabled theme selector in documentation.

	* C/config-themes.xml: Added the theme selector documentation.

2002-03-23  Kevin Breit  <mrproper@ximian.com>

	* C/config-keybindings.xml: Added file to CVS.

	* C/control-center.xml: Added the keybindings capplet so that it will compile.

2002-03-22  Kevin Breit  <mrproper@ximian.com>

	* C/control-center.xml: Hooked the background stuff into this file.  It builds properly. 

	* C/config-background.xml: Created the file.

2002-03-21  Kevin Breit  <mrproper@ximian.com>

	* C/control-center.xml: Updated the file with the latest order and amount of things.

2002-03-17  Kevin Breit  <mrproper@ximian.com>

	* xmldocs.make: Added to CVS.  I am a dummy, didn't add this. 

2002-03-14  Kevin Breit  <mrproper@ximian.com>

	* C/Makefile.am: Added to cvs.
	Made this file work actually.  Added a lot of stuff.

	* Makefile.am: Removed EXTRA_DIST part.
	
2002-03-08  Kevin Breit  <mrproper@ximian.com>

	* C/config-default-apps.xml: Added this file to CVS.

	* C/config-sound.xml: Added this file to CVS.

2002-02-19  Kevin Breit  <mrproper@ximian.com>

	* C/config-cds.xml: Wrote the documentation for this.  Added to CVS.

	* C/config-html.xml: Fixed a typo that caused building to break.

	* C/control-center.xml: Added behavior and cds documentation to the list.

2002-02-15  Kevin Breit  <mrproper@ximian.com>

	* C/config-behavior.xml: Rewrote this for Gnome 2.

2002-02-11  Kevin Breit  <mrproper@ximian.com>

	* C/config-screensaver.xml: Finished documenting this.  The advanced tab is covered.  It could use some more revision, but oh well!  That is for the future.

2002-02-10  Kevin Breit  <mrproper@ximian.com>

	* C/config-screensaver.xml: Did a bit of work on this.  I still need to work on the advanced tab though.  I added the file to CVS.

2002-02-08  Kevin Breit  <mrproper@ximian.com>

	* C/config-mouse.xml: Updated for XML and the new user interface.
