@@ -1,13 +1,17 @@
-docname = gnome-control-center-manual
+figs = 
+docname = control-center-manual
 lang = C
-#omffile = control-center.omf
-entities = config-behavior.xml \
+omffile = control-center-C.omf
+entities = config-background.xml \
+	   config-behavior.xml \
 	   config-cds.xml \
            config-hints.xml \
            config-html.xml \
            config-kbd.xml \
+           config-keybindings.xml \
            config-mouse.xml \
            config-screensaver.xml \
-           config-sound.xml
+           config-sound.xml \
+           config-themes.xml
 include $(top_srcdir)/help/xmldocs.make
 dist-hook: app-dist-hook
