@@ -23,7 +23,7 @@
     <title>Adding a Theme</title>
     <para>
       To add a theme to use:
-      <ordredlist numeration="arabic">
+      <orderedlist numeration="arabic">
 	<listitem>
 	  <para>
 	    Click the <guibutton>Install new theme</guibutton> button.
