@@ -1,3 +1,11 @@
+2002-04-05  Kevin Breit  <mrproper@ximian.com>
+
+	* C/config-themes.xml: Fixed a typo that caused breakage.
+
+	* C/config-keybindings.xml: Fixed some gross breakage.
+
+	* C/control-center-C.omf: Added file to CVS.
+
 2002-03-31  Kevin Breit  <mrproper@ximian.com>
 
 	* C/control-center.xml: Enabled theme selector in documentation.
